<resources>
    <string name="app_name">R6 Stats</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to new player -->
    <string name="title_activity_new_player">Add player</string>
    <string name="hint_player">Name...</string>
    <string name="button_add">Add</string>
    <string name="player_added">%1$s added</string>
    <string name="error_empty">Empty</string>
    <string name="textPlateformType">Plateform</string>
    <string-array name="platformType_array">
        <item>psn</item>
    </string-array>
    <string name="synchronisationSettings">Synchronisation settings</string>
    <string name="syncProgression">Progression</string>
    <string name="syncEmeaSeason">EMEA Season</string>
    <string name="syncNcsaSeason">NCSA Season</string>
    <string name="syncApacSeason">APAC Season</string>
    <string name="syncStats">Statistics</string>
    <string name="syncTimer">Timer</string>
    <string name="syncTimerTitle">Sync. Timer</string>
    <string name="timePattern">%1$d:%2$d</string>
    <string name="errorNoConnection">A connection is needed in order to add a player</string>
    <string name="playerDoesNotExist">%1$s does not exist</string>
    <string name="playerAlreadyRegistered">%1$s is already registered</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="successful_connection">Connected</string>

    <!-- Strings related to Player -->
    <string name="update">Update</string>
    <string name="confirm_delete_player">Delete player ?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="player_deleted">Player deleted</string>
    <string name="set_timer">Set Timer</string>
    <string name="title_activity_player">Statistics</string>
    <string name="tab_stats">Stats</string>
    <string name="tab_settings">Settings</string>
    <string name="tab_timer">Timer</string>
    <string name="timer_set">Timer set !</string>
    <string name="player_updated">Player updated</string>
    <string name="nothing_new">Nothing new</string>
    <string name="timer_disabled">Timer disabled</string>

    <!--Strings related to notifications-->
    <string name="notif_base_message">New statistics</string>
    <string name="notif_casual">Casual</string>

    <!--Strings related to player stats-->
    <string name="rank">Rank</string>
    <string name="max_rank">Max Rank</string>
    <string name="statistics">Statistics (updated %1$s)</string>
    <string name="ranked">Ranked</string>
    <string name="casual">Casual</string>
    <string name="level">Level %1$d (updated %2$s)</string>
    <string name="season_details">%1$s season %2$d%3$s</string>
    <string name="season_mmr">%1$d &lt; <![CDATA[<b>]]>%2$d<![CDATA[</b>]]> &lt; %3$d\nMax mmr %4$d</string>
    <string name="wins">Won\n%1$d</string>
    <string name="losses">Lost\n%1$d</string>
    <string name="wlRatio">w/l\n%1$s</string>
    <string name="abandons">Abandons\n%1$d</string>
    <string name="kills">Kills\n%1$d</string>
    <string name="deaths">Deaths\n%1$d</string>
    <string name="kdRatio">k/d\n%1$s</string>
    <string name="kills_per_min">k/min\n%1$s</string>
    <string name="kills_per_game">k/game\n%1$s</string>
    <string name="deaths_per_game">d/game\n%1$s</string>
    <string name="time_played">Time played\n%1$s</string>
    <string name="precision">Precision\n%1$s\%%</string>
    <string name="headshots">Headshots\n%1$s\%%</string>
    <string name="tab_seasons">Seasons</string>
    <string name="LabelDate">Date</string>
    <string name="LabelRegion">Region</string>
    <string name="LabelSeason">Season</string>
    <string name="LabelMmr">mmr</string>
    <string name="LabelWL">w/l</string>
    <string name="LabelKd">k/d</string>
    <string name="LabelHistory">History (%1$s rows)</string>
    <string name="LabelNoStats">No data</string>
    <string name="general">General</string>
    <string name="assists">Assists\n%1$d</string>
    <string name="revives">Revives\n%1$d</string>
    <string name="melee">Melee\n%1$d</string>
    <string name="penetration">Penetration\n%1$d</string>
    <string name="dbno">DBNO\n%1$d</string>
    <string name="dbnoAssists">DBNO assists\n%1$d</string>
    <string name="suicide">Suicide\n%1$d</string>
    <string name="gadgetDestroyed">Gadget destroy\n%1$d</string>
    <string name="blind">Blind kills\n%1$d</string>
    <string name="rappelBreach">Rappel breach\n%1$d</string>
    <string name="barricadeDeployed">Barricade\n%1$d</string>
    <string name="reinforcementDeployed">Reinforcement\n%1$d</string>
    <string name="distanceTravelled">Distance\n%1$d</string>
    <string name="reviveDenied">Revive denied\n%1$d</string>
    <string name="select_seasons">Select seasons</string>
    <string name="done">Done</string>
    <string name="past_seasons_stats">Past seasons stats...</string>
    <string-array name="seasons_array">
        <item>GRIM SKY</item>
        <item>PARA BELLUM</item>
        <item>CHIMERA</item>
        <item>WHITE NOISE</item>
        <item>BLOOD ORCHID</item>
        <item>HEALTH</item>
    </string-array>

</resources>
