<merge xmlns:android="http://schemas.android.com/apk/res/android">

        <TextView
            android:id="@+id/textPlateformType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/textPlateformType" />

        <Spinner
            android:id="@+id/plateformType_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" />

        <TextView
            android:id="@+id/textSynchronisation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/synchronisationSettings" />

        <Switch
            android:id="@+id/switchSyncProgression"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/syncProgression" />

        <Switch
            android:id="@+id/switchEmeaSeason"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/syncEmeaSeason" />

        <Switch
            android:id="@+id/switchNcsaSeason"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/syncNcsaSeason" />

        <Switch
            android:id="@+id/switchApacSeason"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/syncApacSeason" />

        <Switch
            android:id="@+id/switchStats"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/syncStats" />
</merge>