<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <EditText
        android:id="@+id/edit_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_player"
        android:inputType="textAutoComplete"
        android:padding="10dp"
        android:layout_marginBottom="@dimen/big_padding"
        android:layout_marginTop="@dimen/big_padding"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/grey" />

    <include layout="@layout/common_player_settings" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    <TextView
        android:id="@+id/textSyncTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/syncTimer" />

    <EditText
        android:id="@+id/pickRefreshTimer"
        android:layout_toRightOf="@id/textSyncTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="time"
        android:focusable="false"
        android:focusableInTouchMode="true" />

    </LinearLayout>

    <Button
        android:id="@+id/button_add_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/button_add"
        android:textColor="@color/colorPrimaryDark" />

</LinearLayout>